# AnalogTapeModel

./: .gitignore  .gitmodules  .travis.yml  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ios_builds.sh  mac_builds.sh  validate.sh  win_builds.sh
Plugin/: .clang-format  .clang-tidy  AppConfig.h.in  CHOWTapeModel.jucer  CMakeLists.txt  LV2.mak.in  build_linux.sh  build_lv2.sh
Plugin/Bench/: CHOWTapeBench.jucer
Plugin/Bench/Source/: Main.cpp
Plugin/Installers/: Chowdhury_DSP_License.rtf
Plugin/Installers/Win/: CHOW_Tape_Installer.iss
Plugin/Installers/mac/: ChowTapeModel.pkgproj  Intro.txt  build_mac_installer.sh
Plugin/Installers/windows/: ChowTapeModel_Install_Script.iss  ChowTapeModel_Install_Script_32bit.iss  build_win_installer.sh
Plugin/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Plugin/Source/: CMakeLists.txt  MixGroupsController.cpp  MixGroupsController.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  gui.xml
Plugin/Source/GUI/: AutoUpdating.cpp  AutoUpdating.h  CMakeLists.txt  DragToScrollListener.cpp  DragToScrollListener.h  InfoComp.cpp  InfoComp.h  LightMeter.cpp  LightMeter.h  MixGroupViz.cpp  MixGroupViz.h  ModulatableSlider.cpp  ModulatableSlider.h  MyLNF.cpp  MyLNF.h  OnOffManager.cpp  OnOffManager.h  OversamplingMenu.cpp  OversamplingMenu.h  PowerButton.cpp  PowerButton.h  ScreenshotHelper.cpp  ScreenshotHelper.h  ScrollView.cpp  ScrollView.h  SettingsButton.cpp  SettingsButton.h  TapeScope.cpp  TapeScope.h  TitleComp.cpp  TitleComp.h  TooltipComp.cpp  TooltipComp.h  WowFlutterMenu.cpp  WowFlutterMenu.h  gui.xml  preset_save_gui.xml
Plugin/Source/GUI Components/: BiasControls.cpp  BiasControls.h  HysteresisControls.cpp  HysteresisControls.h  LossControls.cpp  LossControls.h  MainControls.cpp  MainControls.h  TimingControls.cpp  TimingControls.h
Plugin/Source/GUI Extras/: ChowSlider.h  MyLNF.h
Plugin/Source/GUI/Assets/: gui.xml  gui_ios.xml  preset_save_gui.xml
Plugin/Source/GUI/IOSOnly/: DragToScrollListener.cpp  DragToScrollListener.h  ScrollView.cpp  TipJar.cpp  TipJar.h
Plugin/Source/GUI/OnOff/: OnOffManager.cpp  OnOffManager.h  PowerButton.cpp  PowerButton.h
Plugin/Source/GUI/Visualizers/: MixGroupViz.cpp  MixGroupViz.h  TapeScope.cpp  TapeScope.h
Plugin/Source/Headless/: Benchmarks.cpp  Benchmarks.h  CMakeLists.txt  FirBench.h  Main.cpp  ScreenshotHelper.cpp  ScreenshotHelper.h
Plugin/Source/Headless/UnitTests/: HysteresisOpsTest.cpp  MixGroupsTest.cpp  MultiChannelTest.cpp  PresetLevelTest.cpp  STNTest.cpp  SpeedTest.cpp  UnitTests.cpp  UnitTests.h
Plugin/Source/MixGroups/: MixGroupsController.cpp  MixGroupsController.h  MixGroupsParamReceiver.cpp  MixGroupsParamReceiver.h  MixGroupsSharedData.cpp  MixGroupsSharedData.h
Plugin/Source/Presets/: CMakeLists.txt  Default.xml  LoFi.xml  OldTape.xml  PresetComp.cpp  PresetComp.h  PresetManager.cpp  PresetManager.h  Quiet.xml  TC260.xml  Underbiased.xml  WoozyChorus.xml
Plugin/Source/Presets/PresetConfigs/: Default.xml  LoFi.xml  OldTape.chowpreset  OldTape.xml  SNK_Chorus2.chowpreset  SNK_Chorus3.chowpreset  SNK_CleanFat.preset  SNK_CleanFat.xml  SNK_Fat2.preset  SNK_Fat2.xml  SNK_Gritty.chowpreset  SNK_Gritty.preset  SNK_Gritty.xml  SNK_Gritty2.chowpreset  SNK_Gritty2.preset  SNK_Gritty2.xml  SNK_SlightlyWobbly.chowpreset  SNK_SlightlyWobbly.preset  SNK_SlightlyWobbly.xml  SNK_lofi.chowpreset  SNK_lofi.preset  SNK_lofi.xml  TC260.chowpreset  TC260.xml  Underbiased.xml  WoozyChorus.xml
Plugin/Source/Processors/: BilinearUtils.h  BypassProcessor.h  CMakeLists.txt  DryWetProcessor.h  GainProcessor.h  HysteresisProcessing.cpp  HysteresisProcessing.h  IIRFilter.h  InputFilters.cpp  InputFilters.h  ProcessorBase.h
Plugin/Source/Processors/Chew/: ChewProcessor.cpp  ChewProcessor.h  Dropout.h
Plugin/Source/Processors/Compression/: CompressionProcessor.cpp  CompressionProcessor.h
Plugin/Source/Processors/Degrade/: DegradeFilter.h  DegradeNoise.h  DegradeProcessor.cpp  DegradeProcessor.h
Plugin/Source/Processors/Hysteresis/: DCBlocker.h  DCFilters.h  HysteresisOps.h  HysteresisProcessing.cpp  HysteresisProcessing.h  HysteresisProcessor.cpp  HysteresisProcessor.h  HysteresisSTN.cpp  HysteresisSTN.h  OversamplingManager.cpp  OversamplingManager.h  STNModel.cpp  STNModel.h  ToneControl.cpp  ToneControl.h  ToneFilter.h
Plugin/Source/Processors/Input_Filters/: InputFilters.cpp  InputFilters.h  LinkwitzRileyFilter.h
Plugin/Source/Processors/Loss Effects/: LossEffects.cpp  LossEffects.h  LossEffectsFilter.cpp  LossEffectsFilter.h
Plugin/Source/Processors/Loss_Effects/: AzimuthProc.cpp  AzimuthProc.h  FIRFilter.h  LossFilter.cpp  LossFilter.h
Plugin/Source/Processors/MidSide/: MidSideProcessor.cpp  MidSideProcessor.h
Plugin/Source/Processors/PrePostEQ/: EQFilters.h  PrePostEQ.cpp  PrePostEQ.h
Plugin/Source/Processors/Speed Filters/: SpeedFilterProcessor.cpp  SpeedFilterProcessor.h
Plugin/Source/Processors/Timing Effects/: TimingEffect.cpp  TimingEffect.h
Plugin/Source/Processors/Timing_Effects/: DelayProcessor.cpp  DelayProcessor.h  Flutter.cpp  Flutter.h  FlutterProcess.cpp  FlutterProcess.h  OHProcess.h  WowFlutterProcessor.cpp  WowFlutterProcessor.h  WowProcess.cpp  WowProcess.h
Plugin/VST2_SDK/: index.html
Plugin/VST2_SDK/base/source/: basefwd.h  baseiids.cpp  classfactory.cpp  classfactory.h  fatomic.cpp  fatomic.h  fbitset.cpp  fbitset.h  fbuffer.cpp  fbuffer.h  fcleanup.h  fcommandline.h  fcontainer.h  fcpu.cpp  fcpu.h  fcriticalperformance.cpp  fcriticalperformance.h  fdebug.cpp  fdebug.h  fdynlib.cpp  fdynlib.h  fgeoconstants.h  finitializer.cpp  finitializer.h  fmemory.cpp  fmemory.h  fobject.cpp  fobject.h  fpoint.cpp  fpoint.h  frect.cpp  frect.h  (+39 more)
Plugin/VST2_SDK/doc/: VST3_License_Agreement.html  VST3_License_Agreement.rtf  docu.css  index.html  sdk.firstpage.html  sdk.menu.html  sdk.overview.html
Plugin/VST2_SDK/vstgui4/: syncWithSF.sh
Plugin/linux_utils/: LV2.mak.in  generate-lv2-ttl.py
Plugin/modules/: CMakeLists.txt  WarningFlags.cmake
Plugin/modules/cmake/: VersionInfo.cmake  WarningFlags.cmake
(+4534 files in other folders)
